# tomcat

./: Dockerfile  buildspec.yml  parse_env.py  readme.md  run.sh  scan_config.yml  set_tz.sh  skip_tags
.github/: dependabot.yml
.github/containerscan/: allowedlist.yaml
.github/workflows/: publish.yml
ansible/: ansible.cfg  inventory.ini  pyproject.toml  tomcat-playbook.yml  tomcat-requirements.yml
ansible/group_vars/all/: timezone.yml  tomcat.yml
