[tool.poetry]
name = "sig-docker-tomcat-ansible"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "sig_docker_tomcat_ansible"}]

[tool.poetry.dependencies]
python = ">=3.9"
lxml = "^5.1.0"
ansible = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
